# MF66

./: .gitignore  Cargo.toml  README.md  compiler.md
.cargo/: config.toml
bench/: BENCHMARKS.md  collatz.c  collatz.f  collatz.py  fib.c  fib.f  fib.py  lcg.c  lcg.f  lcg.py  run.sh  sieve.c  sieve.f  sieve.py  tlcg.f
docs/: porting-guide.md
docs/design/: mf66-apple-silicon.md  mf66-dictionary.md  mf66-memory-map.md
docs/review/: adversarial-critique.md  dict-subsystem-map.json  review-compiler.json  review-design.json  review-gc_aux.json  review-gui.json  review-kernel.json  review-macncl.json  review-runtime.json  synthesized-plan.md
examples/: broken.f  fib.f  hello.f  squares.f  syntax.f
kernel/: arith.masm  compare.masm  dataspace.masm  dict.masm  exceptions.masm  files.masm  float.masm  fmath.masm  io.masm  logic.masm  macros.masm  main.masm  memalloc.masm  memory.masm  number.masm  numout.masm  oop.masm  prims.masm  rstack.masm  stack.masm  stackext.masm  strings.masm
src/: abi.rs  aenc.rs  asm_macros.rs  codearena.rs  crash.rs  editor.rs  fsyntax.rs  jit.rs  lib.rs  opt.rs  primitives.rs  runtime.rs  session.rs  workspace.rs  wsdriver.rs
tests/: ans_conformance.rs  ans_probe.rs  batch1.rs  casetest.rs  cellcache.rs  charlp.rs  cmpfold.rs  codebench.rs  codeword.rs  colon.rs  control.rs  corpus.rs  crash_handler.rs  createdoes.rs  dataspace.rs  defining.rs  dict.rs  divguard.rs  eval.rs  eval_corpus.rs  exceptions.rs  facility.rs  fileaccess.rs  float.rs  flocals.rs  fp_optimizer.rs  fpmath.rs  helpers.rs  immchain.rs  inlining.rs  kernel_lint.rs  locals.rs  locals2.rs  loops.rs  mandel.rs  marker.rs  memalloc.rs  motion_free.rs  numerics.rs  oop.rs  (+17 more)
tests/data/direct/: d_greater.t
tests/data/eval/: hotvar_inline.in  hotvar_inline.out  inline_lit_fold_consume.in  inline_lit_fold_consume.out  oop_counter.in  oop_early.in  oop_early_proof.in  oop_polymorphism.in  oop_scope.in  oop_super.in  opt_fence_literal_fold.in  opt_fence_literal_fold.out  opt_times_strength.in  opt_times_strength.out
