[package]
name = "mf66"
version = "0.0.1"
edition = "2021"
description = "MF66 — an Apple Silicon (macOS arm64) re-implementation of WF66, a token-IR optimizing STC Forth. JIT-compiled via the JASM AArch64 backend, no LLVM."

[dependencies]
# The LLVM-free JASM backend: the native AArch64 encoder (`a64::A64Encoder`)
# and the MAP_JIT loader (`native_macos::MacJit`). Same crate WF66 uses, same
# `default-features = false` (no LLVM). See docs/design/mf66-apple-silicon.md.
wfasm = { path = "../JASM/rust", default-features = false }
anyhow = "1"
libc = "0.2"

# ── IDE workspace (optional) ──────────────────────────────────────────────────
# `ui`  : the headless workspace state machine (events → DrawBatch). Pulls only
#         the UI-neutral protocol — no AppKit — so it is unit-tested without a
#         display (`cargo test --features ui`).
# `gui` : the native macOS workspace window (the macide AppKit/Core-Text shell).
#         Builds the `mf66-ui` binary (`cargo run --bin mf66-ui --features gui`).
locus-ide-protocol = { path = "../locus/locus-ide-protocol", optional = true }
macide = { path = "../locus/macide", optional = true, default-features = false, features = ["mac-gui"] }

[features]
ui = ["dep:locus-ide-protocol"]
gui = ["ui", "dep:macide"]

[[bin]]
name = "mf66-ui"
required-features = ["gui"]

[lib]
name = "mf66"
path = "src/lib.rs"

# Process-global JIT/loader state (one executable region + W^X per thread) means
# tests must not run concurrently in one process. See the .cargo config.
[profile.dev]
debug = 1

[profile.release]
lto = "thin"

[dev-dependencies]
libc = "0.2"
