[package]
name = "mf66"
version = "0.0.1"
edition = "2021"
description = "MF66 — an Apple Silicon (macOS arm64) re-implementation of WF66, a token-IR optimizing STC Forth. JIT-compiled via the JASM AArch64 backend, no LLVM."

[dependencies]
# The LLVM-free JASM backend: the native AArch64 encoder (`a64::A64Encoder`)
# and the MAP_JIT loader (`native_macos::MacJit`). Same crate WF66 uses, same
# `default-features = false` (no LLVM). See docs/design/mf66-apple-silicon.md.
wfasm = { path = "../JASM/rust", default-features = false }
anyhow = "1"
libc = "0.2"

# ── IDE workspace (optional) ──────────────────────────────────────────────────
# `ui`  : the headless workspace + the TCL agentic control layer. Pulls the
#         UI-neutral protocol, the macide renderer (CgCanvas — headless Core
#         Graphics, NO AppKit), the rust-tcl interpreter, and png. Unit-tested
#         and script-driven without a display (`cargo test --features ui`,
#         `cargo run --bin mf66-tcl --features ui -- script.tcl`).
# `gui` : the native macOS window — adds macide's AppKit shell on top of `ui`.
#         Builds `mf66-ui` (`cargo run --bin mf66-ui --features gui`).
# Vendored into this repo (vendor/) so MF66 is self-contained — no dependency on
# the external locus working tree. macide carries our native-file-dialog change.
locus-ide-protocol = { path = "vendor/locus-ide-protocol", optional = true }
macide = { path = "vendor/macide", optional = true, default-features = false }
rust-tcl = { path = "vendor/rust-tcl", optional = true }
png = { version = "0.17", optional = true }

[features]
ui = ["dep:locus-ide-protocol", "dep:macide", "dep:rust-tcl", "dep:png"]
gui = ["ui", "macide/mac-gui"]

[[bin]]
name = "mf66-ui"
required-features = ["gui"]

[[bin]]
name = "mf66-tcl"
required-features = ["ui"]

[lib]
name = "mf66"
path = "src/lib.rs"

# Process-global JIT/loader state (one executable region + W^X per thread) means
# tests must not run concurrently in one process. See the .cargo config.
[profile.dev]
debug = 1

[profile.release]
lto = "thin"

[dev-dependencies]
libc = "0.2"
